Fix a visibility of an input type radio
Fixed a visibility of an input type radio in the choose wallet address
component. In this component we want a default styles radio btn.

--- a/solidity/dashboard/src/css/choose-wallet-address.less
+++ b/solidity/dashboard/src/css/choose-wallet-address.less
@@ -12,6 +12,7 @@ ul.choose-wallet-address {
         }
         label, label input[type=radio] {
             cursor: pointer;
+            visibility: visible;
         }
         
         label input[type=radio] {
